--- a/app/api/module/Email/view/email/en_GB/plain/ecmt-app-unsuccessful.phtml
+++ b/app/api/module/Email/view/email/en_GB/plain/ecmt-app-unsuccessful.phtml
@@ -1,6 +1,6 @@
 Your ECMT permit application <?php echo $this->escapeHtml($this->applicationRef); ?> has now been considered and processed.
 
-Application status: Unsucccessful
+Application status: Unsuccessful
 
 Unfortunately you have not been allocated any ECMT permits currently.
 
