--- a/module/Email/view/email/cy_GB/html/ecmt-app-unsuccessful.phtml
+++ b/module/Email/view/email/cy_GB/html/ecmt-app-unsuccessful.phtml
@@ -1,6 +1,6 @@
 <p>Your ECMT permit application <?php echo $this->escapeHtml($this->applicationRef); ?> has now been considered and processed.</p>
 
-<h3 class="heading-small">Application status: Unsucccessful</h3>
+<h3 class="heading-small">Application status: Unsuccessful</h3>
 
 <p>Unfortunately you have not been allocated any ECMT permits currently.</p>
 
