--- a/module/Email/view/email/cy_GB/html/ecmt-app-issued.phtml
+++ b/module/Email/view/email/cy_GB/html/ecmt-app-issued.phtml
@@ -1,4 +1,4 @@
-<p>Your ECMT permit issuing fee for application number <?php echo $this->escapeHtml($this->applicationRef); ?> has now been received.</p>
+<p>Your ECMT permit issuing fee for application number <strong><?php echo $this->escapeHtml($this->applicationRef); ?></strong> has now been received.</p>
 
 <p>Your permits are now being processed and issued.</p>
 
@@ -6,4 +6,4 @@
 
 <p>You can check <a href="<?php echo $this->escapeHtml($this->guidanceUrl); ?>">ECMT guidance notes</a> on how to instruct your drivers, manage your paper permit and logbook and be fully compliant before going abroad.</p>
 
-<a class="action--primary" href="<?php echo $this->permitsUrl; //replaced based on the env, so can't escape ?>">View your application</a>
+<a class="action--primary" href="<?php echo $this->permitsUrl; //replaced based on the env, so can't escape ?>">View issued permits</a>
