--- a/module/Email/view/email/cy_GB/html/ecmt-app-unsuccessful.phtml
+++ b/module/Email/view/email/cy_GB/html/ecmt-app-unsuccessful.phtml
@@ -1,4 +1,4 @@
-<p>Your ECMT permit application <?php echo $this->escapeHtml($this->applicationRef); ?> has now been considered and processed.</p>
+<p>Your ECMT permit application <strong><?php echo $this->escapeHtml($this->applicationRef); ?></strong> has now been considered and processed.</p>
 
 <h3 class="heading-small">Application status: Unsuccessful</h3>
 
