--- a/module/Email/view/layout/en_GB/html/default.phtml
+++ b/module/Email/view/layout/en_GB/html/default.phtml
@@ -45,6 +45,18 @@
                 text-decoration: none;
             }
 
+            .action--primary {
+                display: inline-block;
+                background-color: #00823b;
+                text-decoration: none;
+                color: #fff;
+                border-color: #004f24;
+                vertical-align: middle;
+                padding: 0.5em 0.75em;
+                border-bottom: 2px solid;
+                line-height: 1.4;
+                cursor: pointer;
+            }
         </style>
 
     </head>
