--- a/app/api/module/Email/view/email/cy_GB/plain/ecmt-app-submitted.phtml
+++ b/app/api/module/Email/view/email/cy_GB/plain/ecmt-app-submitted.phtml
@@ -6,7 +6,7 @@ As a result of your application and the allocation process you might be granted 
 * Some of your permits required
 * None of your permits required
 
-Within the next 30 days you will receive an email informing if your application was successful, partially successful or unsuccessful.
+We will contact you when we have considered all applications that have been submitted to advise you if your application was successful, partially successful or unsuccessful.
 
 By signing into your vehicle operator licence account you can:
 
