--- a/app/api/module/Email/view/email/en_GB/html/ecmt-app-submitted.phtml
+++ b/app/api/module/Email/view/email/en_GB/html/ecmt-app-submitted.phtml
@@ -8,7 +8,7 @@
     <li>None of your permits required</li>
 </ul>
 
-<p>Within the next 30 days you will receive an email informing if your application was successful, partially successful or unsuccessful.</p>
+<p>We will contact you when we have considered all applications that have been submitted to advise you if your application was successful, partially successful or unsuccessful.</p>
 
 <p>By signing into your <a href="<?php echo $this->appUrl; //replaced based on the env, so can't escape ?>">vehicle operator licence account</a> you can:</p>
 
