--- a/module/Email/view/email/en_GB/plain/ecmt-app-successful.phtml
+++ b/module/Email/view/email/en_GB/plain/ecmt-app-successful.phtml
@@ -1,18 +1,14 @@
 Your ECMT permit application <?php echo $this->applicationRef; ?> has now been considered and processed.
 
-Application status: Succcessful
+Application status: Successful
 You have been allocated the full number of permits you applied for.
 
 * Number of permits required: <?php echo $this->permitsRequired; ?>
 * Number of permits granted: <?php echo $this->permitsGranted; ?>
 
-
 Next steps
-You now need to pay the Permit Issuing total fee of £<?php echo $this->issueFeeTotal; ?>
-(£<?php echo $this->issueFeeAmount; ?> per permit) before receiving your paper based permit and
-corresponding logbook. These will be posted by first class recorded delivery.
+You now need to pay the Permit Issuing total fee of £<?php echo $this->issueFeeTotal; ?> (£<?php echo $this->issueFeeAmount; ?> per permit) before receiving your paper based permit and corresponding logbook. These will be posted by first class recorded delivery.
 
-You have <?php echo $this->paymentDeadlineNumDays; ?> calendar days to pay for your allocated
-permits. If you do not pay the Permit Issuing fee by <?php echo $this->issueFeeDeadlineDate; ?>
-the permits granted to your business will beautomatically cancelled.
+You have <?php echo $this->paymentDeadlineNumDays; ?> calendar days to pay for your allocated permits. If you do not pay the Permit Issuing fee by <?php echo $this->issueFeeDeadlineDate; ?> the permits granted to your business will be automatically cancelled.
+
 Pay for your permits at <?php echo $this->permitsUrl; ?>
