--- a/app/api/module/Email/view/email/en_GB/html/ecmt-app-successful.phtml
+++ b/app/api/module/Email/view/email/en_GB/html/ecmt-app-successful.phtml
@@ -1,6 +1,6 @@
 <p>Your ECMT permit application <?php echo $this->escapeHtml($this->applicationRef); ?> has now been considered and processed.</p>
 
-<h3>Application status: Succcessful</h3>
+<h3>Application status: Successful</h3>
 <p>You have been allocated the full number of permits you applied for.
 <ul>
     <li>Number of permits required: <?php echo $this->escapeHtml($this->permitsRequired); ?></li>
@@ -14,5 +14,5 @@
 
 <p>You have <?php echo $this->escapeHtml($this->paymentDeadlineNumDays); ?> calendar days to pay for your allocated
     permits. If you do not pay the Permit Issuing fee by <?php echo $this->escapeHtml($this->issueFeeDeadlineDate); ?>
-    the permits granted to your business will beautomatically cancelled.</p>
+    the permits granted to your business will be automatically cancelled.</p>
 <a href="<?php echo $this->escapeHtml($this->permitsUrl); ?>">Pay for your permits</a>
