--- a/module/Email/view/email/en_GB/html/ecmt-app-part-successful.phtml
+++ b/module/Email/view/email/en_GB/html/ecmt-app-part-successful.phtml
@@ -15,4 +15,4 @@
 <p>You have <?php echo $this->escapeHtml($this->paymentDeadlineNumDays); ?> calendar days to pay for your allocated
     permits. If you do not pay the Permit Issuing fee by <?php echo $this->escapeHtml($this->issueFeeDeadlineDate); ?>
     the permits granted to your business will be automatically cancelled.</p>
-<a href="<?php echo $this->escapeHtml($this->permitsUrl); ?>">Pay for your permits</a>
+<a href="<?php echo $this->awaitingFeeUrl; //replaced based on the env, so can't escape ?>">Pay for your permits</a>
