--- a/app/api/module/Email/view/email/en_GB/plain/ecmt-app-successful.phtml
+++ b/app/api/module/Email/view/email/en_GB/plain/ecmt-app-successful.phtml
@@ -11,4 +11,4 @@ You now need to pay the Permit Issuing total fee of £<?php echo $this->issueFee
 
 You have <?php echo $this->paymentDeadlineNumDays; ?> calendar days to pay for your allocated permits. If you do not pay the Permit Issuing fee by <?php echo $this->issueFeeDeadlineDate; ?> the permits granted to your business will be automatically cancelled.
 
-Pay for your permits at <?php echo $this->permitsUrl; ?>
+Pay for your permits at <?php echo $this->awaitingFeeUrl; ?>
