--- a/module/Email/view/email/en_GB/html/last-tm-operator-notification.phtml
+++ b/module/Email/view/email/en_GB/html/last-tm-operator-notification.phtml
@@ -5,7 +5,7 @@
     you respond within the stated deadline.
 </p>
 <p>
-    PLEASE NOTE. A failure to respond to this letter will result in the traffic commissioner revoking the licence. The
+    PLEASE NOTE. A failure to respond to this letter will result in your licence being revoked. The
     revocation of the licence would render unlawful the operation of vehicles for which an operator’s licence is
     required.
 </p>
