--- a/module/Email/view/email/en_GB/plain/last-tm-operator-notification.phtml
+++ b/module/Email/view/email/en_GB/plain/last-tm-operator-notification.phtml
@@ -1,6 +1,6 @@
 Dear operator,
 Important documentation relating to your Operator’s Licence <?php echo $this->escapeHtml($this->licNo); ?> has been sent by recorded delivery post to all known addresses. This is following the removal of your last TM, please ensure you respond within the stated deadline.
- PLEASE NOTE. A failure to respond to this letter will result in the traffic commissioner revoking the licence. The revocation of the licence would render unlawful the operation of vehicles for which an operator’s licence is required.
+ PLEASE NOTE. A failure to respond to this letter will result in your licence being revoked. The revocation of the licence would render unlawful the operation of vehicles for which an operator’s licence is required.
 <?php if (!$this->registeredToSelfserve) : ?>
 
 You can update your operator’s licence on-line, for example you can:
