--- a/module/Snapshot/config/language/partials/en_GB/markup-tma-declaration-internal-gb.phtml
+++ b/module/Snapshot/config/language/partials/en_GB/markup-tma-declaration-internal-gb.phtml
@@ -3,7 +3,7 @@
 <ul class="list--bullet">
     <li>I shall effectively and continuously manage the transport activities of the licence holder/applicant; and</li>
     <li>I have a genuine link to the licence holder/applicant; and</li>
-    <li>I am resident in the European Community.</li>
+    <li>%s.</li>
 </ul>
 
 <p>I understand that my responsibilities include:</p>
@@ -19,5 +19,5 @@
 </ul>
 
 <p>
-    <strong>Should I fail to meet any of the above requirements I understand that the traffic commissioner has the power to disqualify me from being a transport manager in any European Union country. I also understand that I do not become a CPC holder for the licence(s) named until this is confirmed in writing by the Traffic Commissioner.</strong>
+    <strong>Should I fail to meet any of the above requirements I understand that the traffic commissioner has the power to disqualify me from being a transport manager in any European Union country. %s</strong>
 </p>
