--- a/app/api/module/Snapshot/config/language/partials/en_GB/markup-tma-declaration-external-gb.phtml
+++ b/app/api/module/Snapshot/config/language/partials/en_GB/markup-tma-declaration-external-gb.phtml
@@ -4,7 +4,7 @@
 
 <p>I confirm that:</p>
 <ul class="list--bullet">
-    <li>I am resident in the European Community;</li>
+    <li>%s;</li>
     <li>I shall perform my tasks solely in the interests of the licence holder/applicant;</li>
     <li>I shall be the transport manager for a maximum of 4 operators, with a combined maximum total fleet of 50 vehicles; and</li>
     <li>I have a contract with the licence holder/applicant which specifies the tasks I must perform as transport manager. These include:
@@ -29,5 +29,5 @@
 </ul>
 
 <p>
-    <b>Should I fail to meet any of the above requirements I understand that the traffic commissioner has the power to disqualify me from being a transport manager in any European Union country. I also understand that I do not become a CPC holder for the licence(s) named until this is confirmed in writing by the Traffic Commissioner.</b>
+    <b>Should I fail to meet any of the above requirements I understand that the traffic commissioner has the power to disqualify me from being a transport manager in any European Union country. %s</b>
 </p>
