--- a/module/Snapshot/view/partials/review-continuation-section.phtml
+++ b/module/Snapshot/view/partials/review-continuation-section.phtml
@@ -2,27 +2,29 @@
     <h4><?php echo $this->translate($header); ?></h4>
 <?php endif; ?>
 <?php
-$additionalClass = 'table--2-column';
-if (is_array($data) && is_array($data[0]) && count($data[0]) === 3) {
-    $additionalClass = 'table--3-column';
-}
-echo '<table class="' . $additionalClass . '">';
-foreach ($data as $line) {
-    echo '<tr>';
-    foreach ($line as $cell) {
-        if (isset($cell['header']) && $cell['header']) {
-            $openTag = '<th>';
-            $closeTag = '</th>';
-        } else {
-            $openTag = '<td>';
-            $closeTag = '</td>';
-        }
-        $value = $this->translate($cell['value']);
-        if (!isset($cell['noEscape']) || $cell['noEscape'] === false) {
-            $value = $this->escapeHtml($value);
-        }
-        echo $openTag . $value . $closeTag;
+if (!empty($data)) {
+    $additionalClass = 'table--2-column';
+    if (is_array($data) && is_array($data[0]) && count($data[0]) === 3) {
+        $additionalClass = 'table--3-column';
     }
-    echo '</tr>';
+    echo '<table class="' . $additionalClass . '">';
+    foreach ($data as $line) {
+        echo '<tr>';
+        foreach ($line as $cell) {
+            if (isset($cell['header']) && $cell['header']) {
+                $openTag = '<th>';
+                $closeTag = '</th>';
+            } else {
+                $openTag = '<td>';
+                $closeTag = '</td>';
+            }
+            $value = $this->translate($cell['value']);
+            if (!isset($cell['noEscape']) || $cell['noEscape'] === false) {
+                $value = $this->escapeHtml($value);
+            }
+            echo $openTag . $value . $closeTag;
+        }
+        echo '</tr>';
+    }
+    echo '</table>';
 }
-echo '</table>';
