--- a/module/Snapshot/config/language/partials/en_GB/markup-tma-declaration-signature-digital-operator-tm.phtml
+++ b/module/Snapshot/config/language/partials/en_GB/markup-tma-declaration-signature-digital-operator-tm.phtml
@@ -9,7 +9,7 @@
         <form>
             <div>
                 <label class="signature-box__label">Licence holder and Transport Manager's signature</label>
-                <span class="signature-box__value">Signed by using GOV.UK Verify</span>
+                <span class="signature-box__value">Signed by using {{SIGNING_SERVICE_NAME}}</span>
             </div>
 
             <div>
