--- a/module/Email/view/email/en_GB/html/last-tm-operator-notification.phtml
+++ b/module/Email/view/email/en_GB/html/last-tm-operator-notification.phtml
@@ -1,7 +1,7 @@
 <p>Dear operator,</p>
 <p>
     Important documentation relating to your Operator’s Licence <?php echo $this->escapeHtml($this->licNo); ?> has been
-    sent by recorded delivery post to your correspondence address. This is following the removal of your last TM, please ensure
+    sent by recorded delivery post to all known addresses. This is following the removal of your last TM, please ensure
     you respond within the stated deadline.
 </p>
 <p>
