Vol 4164 update declarations

--- a/app/api/module/Snapshot/config/language/partials/en_GB/markup-application_undertakings_GV79-auth-restricted.phtml
+++ b/app/api/module/Snapshot/config/language/partials/en_GB/markup-application_undertakings_GV79-auth-restricted.phtml
@@ -3,18 +3,18 @@
 </p>
 <p>
     I understand that it is the responsibility of the applicant to ensure that they have the required experience and
-    training prior to making an application for an operator’s licence. I confirm that by signing this application that I
-    understand the responsibilities and requirements of holding a goods vehicle operator’s licence and will ensure that
+    training prior to making an application for an operator's licence. I confirm that by signing this application that I
+    understand the responsibilities and requirements of holding a goods vehicle operator's licence and will ensure that
     I will keep updated on those requirements.
 </p>
 <p>
-    I understand that I must notify the traffic commissioner of any relevant conviction of the applicant or transport
-    manager incurred since making the application and that a failure to do so is an offence.
+    I understand that I must notify the traffic commissioner of any relevant conviction of the applicant incurred since
+    making the application and that a failure to do so is an offence.
 </p>
 <p>
     I understand that any changes which occur during the consideration of an application, information which materially
-    changes from that originally declared when the application was first submitted including loss of a transport
-    manager, must be notified to the traffic commissioner.
+    changes from that originally declared when the application was first submitted, must be notified to the traffic
+    commissioner.
 </p>
 <p>
     I understand that if a licence is issued it will authorise a maximum number of vehicles and trailers that may be
@@ -25,24 +25,30 @@
     I understand that by signing this application I am accepting that the following undertakings will be recorded on the
     licence:
 </p>
+
+
+
 <ul class="list--bullet">
     <li>The laws relating to the driving and operation of vehicles will be observed;</li>
-    <li>The rules on drivers’ hours and tachographs are observed and proper records are kept for at least 12 months, and
-        that these are made available on request;</li>
+    <li>The rules on drivers hours and tachographs are observed and proper records are kept for at least 12 months, and
+        that these are made available on request;
+    </li>
     <li>Vehicles and trailers are not overloaded or operated with an insecure load;</li>
     <li>Vehicles will operate within speed limits;</li>
     <li>Vehicles and trailers, including hired vehicles and trailers, are kept in a fit and serviceable condition;</li>
     <li>Drivers report promptly any defects or symptoms of defects that could prevent the safe operation of vehicles
-        and/or trailers, and that any defects are recorded in writing;</li>
+        and/or trailers, and that any defects are recorded in writing;
+    </li>
     <li>Records are kept (for 15 months) of all driver defect reports, all safety inspections, routine maintenance and
-        repairs to vehicles and trailers, and these are made available on request;</li>
+        repairs to vehicles and trailers repair reports, and these are made available on request;
+    </li>
 </ul>
 
 <p>
     I understand that if a licence is issued it will be subject to the following conditions:
 </p>
 <p>
-    That the licence holder, shall, within 28 days of their occurrence, inform the traffic commissioner of any:
+    a) That the licence holder, shall, within 28 days of their occurrence, inform the traffic commissioner of any:
 </p>
 
 <ul class="list--bullet">
@@ -55,25 +61,23 @@
     </li>
     <li>Events which affect:
         <ol class="validation-summary__list">
-            <li>The good repute of the licence holder and transport manager, in particular, relevant convictions as
-                defined in schedule 3 to the 1995 Act (this includes the issue of a fixed penalty notice or conditional
-                offer under Part 3 of the Road Traffic Offenders Act 1988);
+            <li>The fitness of the licence holder, in particular, relevant convictions as defined in schedule 3 to the
+                1995 Act (this includes the issue of a fixed penalty notice or conditional offer under Part 3 of the
+                Road Traffic Offenders Act 1988);
             </li>
-            <li>The professional competence of the licence holder and/or transport manager;</li>
-            <li>The requirement for the licence holder to be of appropriate financial standing (including details of any
-                bankruptcy, liquidation, sequestration of estate or entry into administration of the holder of the
+            <li>The requirement for the licence holder to have the appropriate financial resources (including details of
+                any bankruptcy, liquidation, sequestration of estate or entry into administration of the holder of the
                 appointment of a receiver, manager or trustee);
-            </li>
-            <li>The requirement to have an effective and stable establishment in Great Britain namely; any change to the
-                specified address of establishment, and the requirement to have access at all times to at least one
-                goods vehicle registered or in circulation in Great Britain;
             </li>
         </ol>
     </li>
 </ul>
+<p>b) In respect of each operating centre specified, that the number of authorised motor vehicles and the number of
+    authorised trailers kept there will not exceed the maximum numbers recorded against the operating centre on this
+    licence.
+</p>
 
-<p>
-    Any failure to comply with the statements made to obtain a licence, conditions or undertakings recorded on the
+<p>Any failure to comply with the statements made to obtain a licence, conditions or undertakings recorded on the
     licence may result in the licence being revoked, suspended or curtailed; and that failure to comply with the
     conditions is a criminal offence.
 </p>
