--- a/app/api/module/Snapshot/config/language/partials/en_GB/markup-application_undertakings_GV79-si.phtml
+++ b/app/api/module/Snapshot/config/language/partials/en_GB/markup-application_undertakings_GV79-si.phtml
@@ -22,37 +22,43 @@
     terms of the licence.
 </p>
 <p>
+    I must be able to prove that I have a formal arrangement for access at all times to at least one vehicle registered
+    or in circulation in GB. This could be by specifying a vehicle for use under an operator’s licence or by
+    demonstrating on request that I (the licence holder) have a vehicle available, so that vehicles may be either wholly
+    owned or held under a hire-purchase, hire / leasing or other type of formal arrangement;
+</p>
+<p>
+    I have an establishment in Great Britain (GB) with premises in which I keep core business documents. These
+    include (as a minimum) accounting and personnel management documents and data on driving time and rest. I
+    understand that the use of a PO Box or third party address is not permitted.
+</p>
+<p>
     I understand that by signing this application I am accepting that the following undertakings will be recorded on the
     licence:
 </p>
+
 <ul class="list--bullet">
     <li>The laws relating to the driving and operation of vehicles will be observed;</li>
     <li>The rules on drivers’ hours and tachographs are observed and proper records are kept for at least 12 months, and
         that these are made available on request;</li>
     <li>Vehicles and trailers are not overloaded or operated with an insecure load;</li>
     <li>Vehicles will operate within speed limits;</li>
-    <li>Vehicles and trailers, including hired vehicles and trailers, are kept in a fit and serviceable condition;</li>
-    <li>Drivers report promptly any defects or symptoms of defects that could prevent the safe operation of vehicles
-        and/or trailers, and that any defects are recorded in writing;</li>
+    <li>Vehicles, including hired vehicles and, are kept in a fit and serviceable condition;</li>
+    <li>Drivers report promptly any defects or symptoms of defects that could prevent the safe operation of vehicles,
+        and that any defects are recorded in writing;</li>
     <li>Records are kept (for 15 months) of all driver defect reports, all safety inspections, routine maintenance and
         repairs to vehicles and trailers, and these are made available on request;</li>
 </ul>
 
-<p>
-    I understand that if a licence is issued it will be subject to the following conditions:
-</p>
-<p>
-    That the licence holder, shall, within 28 days of their occurrence, inform the traffic commissioner of any:
-</p>
+<p>I understand that if a licence is issued it will be subject to the following conditions:</p>
+<p>a) That the licence holder, shall, within 28 days of their occurrence, inform the traffic commissioner of any:</p>
 
 <ul class="list--bullet">
     <li>Changes in the maintenance and safety inspection arrangements;</li>
     <li>Changes in the ability to ensure authorised vehicles are being operated safely and not causing danger to the
-        public;
-    </li>
+        public;</li>
     <li>Changes in the ownership of the business including partnership arrangements. Company changes in shareholding
-        need not be notified unless they cause a change in the control of the Company;
-    </li>
+        need not be notified unless they cause a change in the control of the Company;</li>
     <li>Events which affect:
         <ol class="validation-summary__list">
             <li>The good repute of the licence holder and transport manager, in particular, relevant convictions as
@@ -72,8 +78,11 @@
     </li>
 </ul>
 
-<p>
-    Any failure to comply with the statements made to obtain a licence, conditions or undertakings recorded on the
+<p>b) In respect of each operating centre specified, that the number of authorised motor vehicles and the number of
+    authorised trailers kept there will not exceed the maximum numbers recorded against the operating centre on this
+    licence.
+</p>
+<p>Any failure to comply with the statements made to obtain a licence, conditions or undertakings recorded on the
     licence may result in the licence being revoked, suspended or curtailed; and that failure to comply with the
     conditions is a criminal offence.
 </p>
