--- a/app/api/module/Snapshot/config/language/partials/cy_GB/markup-application_undertakings_GV79.phtml
+++ b/app/api/module/Snapshot/config/language/partials/cy_GB/markup-application_undertakings_GV79.phtml
@@ -1,38 +1,85 @@
+<p>I declare that the statements of fact or expectation provided in support of this application are correct.</p>
+
+<p>I understand that it is the responsibility of the applicant to ensure that they have the required experience and
+    training prior to making an application for an operator’s licence. I confirm that by signing this application that I
+    understand the responsibilities and requirements of holding a goods vehicle operator’s licence and will ensure that
+    I will keep updated on those requirements.</p>
+
+<p>I understand that I must notify the traffic commissioner of any relevant conviction of the applicant or transport
+    manager incurred since making the application and that a failure to do so is an offence.</p>
+
+<p>I understand that any changes which occur during the consideration of an application, information which materially
+    changes from that originally declared when the application was first submitted including loss of a transport
+    manager, must be notified to the traffic commissioner.</p>
+
+<p>I understand that if a licence is issued it will authorise a maximum number of vehicles and trailers that may be used
+    under it at any one time, and that it is an offence to use more vehicles or trailers than permitted under the terms
+    of the licence.</p>
+
 <p>
-    Deallaf drwy arwyddo’r cais hwn fy mod yn derbyn yr ymgymeriadau isod; y byddant yn cael eu cofnodi  ar y
-    drwydded; y gallai methu â chydymffurfio a’r amodau neu’r ymgymeriadau a gofnodwyd ar y drwydded olygu  y caiff y
-    drwydded ei dirymu, ei hatal neu ei chyfyngu; a bod methu â chydymffurfio â’r amodau hyn hefyd yn  drosedd. 
+    I must be able to prove that I have a formal arrangement for access at all times to at least one vehicle registered
+    or in circulation in GB. This could be by specifying a vehicle for use under an operator’s licence or by
+    demonstrating on request that I (the licence holder) have a vehicle available, so that vehicles may be either wholly
+    owned or held under a hire-purchase, hire / leasing or other type of formal arrangement;
 </p>
-<ul class="list--bullet"> 
-    <li>Mae’r deddfwriaethau sy’n gysylltiedig â gyrru a gweithredu’r cerbydau a ddefnyddir dan y drwydded hon yn cael
-        eu parchu;
-    </li>
-    <li>  Mae’r rheolau ynghylch oriau a thacograffiau gyrwyr yn cael eu parchu, cedwir cofnodion cywir a bod y rhain 
-        ar gael ar gais; 
-    </li>
-    <li>Nid yw cerbydau ac ôl-gerbydau yn cael eu gorlwytho;</li>
-    <li>Mae cerbydau’n gweithredu o fewn y cyfyngderau cyflymder;</li>
-    <li>Cedwir cerbydau ac ôl-gerbydau, gan gynnwys cerbydau ac ôl-gerbydau sy’n cael eu hurio, mewn cyflwr da ac wedi
-        eu trin;
-    </li>
-    <li>  Mae gyrwyr yn adrodd ar unrhyw ddiffygion neu arwyddion o ddiffygion yn brydlon, sef diffygion a allai atal y
-        cerbydau rhag cael eu gyrru’n ddiogel  ynghyd â/ neu ôl-gerbydau, ac y cofnodir unrhyw ddiffygion yn
-        ysgrifenedig; 
-    </li>
-    <li>  Cedwir cofnodion (am 15 mis) o bob cofnod o ddiffygion gan yrwyr, ynghyd ag unrhyw archwiliad diogelwch,
-        gwaith cynnal a chadw  arferol ac atgyweiriadau i gerbydau, a’u bod ar gael ar gais; 
-    </li>
-    %s
-    <li>  Ymhellach, byddaf yn hysbysu’r Comisiynydd Traffig o unrhyw gollfarnau yn fy erbyn i, neu’r cwmni,
-        partner(iaid)  busnes, cyfarwyddwyr y cwmni, rheolw(y)r trafnidiaeth a enwebwyd ac a enwyd yn y cais hwn, neu
-        gyflogeion neu  asiantwyr yr ymgeisydd am y drwydded hon ac, os cyhoeddir y drwydded, gollfarnau yn erbyn
-        deilydd y drwydded  neu gyflogeion neu asiantwyr deilydd y drwydded; 
-    </li>
-    <li>  Byddaf yn sicrhau yr hysbysir y Comisiynydd Traffig cyn pen 28 diwrnod ynghylch unrhyw newid arall, er
-        enghraifft  i’r trefniadau cynnal a chadw a gynigir; newid yn statws ariannol deilydd y drwydded (e.e. os  daw y
-        cwmni i ben neu fynd i ddwylo derbynnydd), neu newid i fod yn Gwmni Cyfyngedig neu bartneriaeth, a allai
-        effeithio  ar y drwydded os caiff ei chyhoeddi. 
-    </li>
-      %s 
+<p>
+    I have an establishment in Great Britain (GB) with premises in which I keep core business documents. These
+    include (as a minimum) accounting and personnel management documents and data on driving time and rest. I
+    understand that the use of a PO Box or third party address is not permitted.
+</p>
+
+<p>I understand that by signing this application I am accepting that the following undertakings will be recorded on the
+    licence:</p>
+
+<ul class="list--bullet">
+    <li>The laws relating to the driving and operation of vehicles will be observed;</li>
+    <li>The rules on drivers’ hours and tachographs are observed and proper records are kept for at least 12 months, and
+        that these are made available on request;</li>
+    <li>Vehicles and trailers are not overloaded or operated with an insecure load;</li>
+    <li>Vehicles will operate within speed limits;</li>
+    <li>Vehicles and trailers, including hired vehicles and trailers, are kept in a fit and serviceable condition;</li>
+    <li>Drivers report promptly any defects or symptoms of defects that could prevent the safe operation of vehicles
+        and/or trailers, and that any defects are recorded in writing;</li>
+    <li>Records are kept (for 15 months) of all driver defect reports, all safety inspections, routine maintenance and
+        repairs to vehicles and trailers and these are made available on request;</li>
 </ul>
- %s 
+
+<p>I understand that if a licence is issued it will be subject to the following conditions:</p>
+
+<p>a) That the licence holder, shall, within 28 days of their occurrence, inform the traffic commissioner of any:</p>
+<ul class="list--bullet">
+    <li>Changes in the maintenance and safety inspection arrangements;</li>
+    <li>Changes in the ability to ensure authorised vehicles are being operated safely and not causing danger to the
+        public;</li>
+    <li>Changes in the ownership of the business including partnership arrangements. Company changes in shareholding
+        need not be notified unless they cause a change in the control of the Company;</li>
+
+    <li>Events which affect:
+        <ol class="validation-summary__list">
+            <li>The good repute of the licence holder and transport manager, in particular, relevant convictions as
+                defined in schedule 3 to the 1995 Act (this includes the issue of a fixed penalty notice or conditional
+                offer under Part 3 of the Road Traffic Offenders Act 1988);</li>
+
+            <li>The professional competence of the licence holder and/or transport manager;></li>
+
+            <li>The requirement for the licence holder to be of appropriate financial standing (including details of any
+                bankruptcy, liquidation, sequestration of estate or entry into administration of the holder of the
+                appointment of a receiver, manager or trustee);</li>
+
+            <li>The requirement to have an effective and stable establishment in Great Britain namely; any change to the
+                specified address of establishment, and the requirement to have access at all times to at least one
+                goods vehicle registered or in circulation in Great Britain;</li>
+        </ol>
+    </li>
+</ul>
+<p>
+    b) In respect of each operating centre specified, that the number of authorised motor vehicles and the number of
+    authorised trailers kept there will not exceed the maximum numbers recorded against the operating centre on this
+    licence.
+</p>
+<p>
+    Any failure to comply with the statements made to obtain a licence, conditions or undertakings recorded on the
+    licence may result in the licence being revoked, suspended or curtailed; and that failure to comply with the
+    conditions is a criminal offence.
+</p>
+%s
