feat: Enhanced conversation snapshot (dvsa/olcs-backend#120)
* feat: Enhanced conversation snapshot

* fix: Move CW signature above read history

--- a/app/api/module/Snapshot/view/partials/read-only/printable-message.phtml
+++ b/app/api/module/Snapshot/view/partials/read-only/printable-message.phtml
@@ -1,4 +1,5 @@
 <?php /** @global \Dvsa\Olcs\Api\Entity\Messaging\MessagingMessage $message */ ?>
+<?php /** @global bool $enhanced */ ?>
 <div class="govuk-!-margin-bottom-6">
   <div class="govuk-summary-card">
     <div class="govuk-summary-card__title-wrapper">
@@ -19,11 +20,36 @@
     <div class="govuk-summary-card__content">
       <p class="govuk-body">
         <?php echo nl2br($message->getMessagingContent()->getText()); ?>
-        <?php
-        if ($message->getCreatedBy()->getTeam() !== null) {
-          echo '<p class="govuk-caption-m">'.$sender.'<br/>Caseworker Team</p>';
-        }
-        ?>
+        <?php if ($message->getCreatedBy()->getTeam() !== null): ?>
+          <p class="govuk-caption-m">
+            <?php echo $sender; ?>
+            <br/>
+            Caseworker Team
+          </p>
+        <?php endif; ?>
+        <?php if ($enhanced): ?>
+          <hr/>
+          <?php foreach ($message->getUserMessageReads() as $messageRead): /** @var \Dvsa\Olcs\Api\Entity\Messaging\MessagingUserMessageRead $messageRead */ ?>
+            <p>
+              <em>
+                <?php
+                if ($messageRead->getUser()->getContactDetails() && $messageRead->getUser()->getContactDetails()->getPerson()) {
+                  $readBy = $messageRead->getUser()->getContactDetails()->getPerson()->getFullName();
+                } elseif ($messageRead->getUser()->getContactDetails() && $messageRead->getUser()->getContactDetails()->getEmailAddress()) {
+                  $readBy = $messageRead->getUser()->getContactDetails()->getEmailAddress();
+                } else {
+                  $readBy = $messageRead->getUser()->getLoginId();
+                }
+
+                echo sprintf(
+                  'Read by %s on %s',
+                  $readBy,
+                  $messageRead->getCreatedOn(true)->format('l j F Y \a\t H:ia')
+                ); ?>
+              </em>
+            </p>
+          <?php endforeach; ?>
+        <?php endif; ?>
       </p>
     </div>
   </div>
