fix: don't remove self-serve users last name

--- a/module/Snapshot/view/partials/read-only/printable-message.phtml
+++ b/module/Snapshot/view/partials/read-only/printable-message.phtml
@@ -6,10 +6,10 @@
       <h2 class="govuk-summary-card__title">
         <?php
         if ($message->getCreatedBy()->getContactDetails() !== null && $message->getCreatedBy()->getContactDetails()->getPerson()) {
-          if ($enhanced){
-            $sender = $message->getCreatedBy()->getContactDetails()->getPerson()->getFullName();
-          } else {
+          if (!$enhanced && $message->getCreatedBy()->getTeam() !== null){
             $sender = $message->getCreatedBy()->getContactDetails()->getPerson()->getForename();
+          } else {
+            $sender = $message->getCreatedBy()->getContactDetails()->getPerson()->getFullName();
           }
         } else {
           $sender = $message->getCreatedBy()->getLoginId();
